# benchmark-web-frameworks

./: README.md
actix/: Cargo.toml  Dockerfile  docker-compose.yaml
actix/src/: main.rs
actix/tests/: do.sh
httpbin-python-fastapi/: README.md  pyproject.toml
httpbin-python-fastapi/httpbin_python_fastapi/: main.py
httpbin-rust-axum/: Cargo.toml
httpbin-rust-axum/src/: main.rs
httpbin-rust-client/: Cargo.toml
httpbin-rust-client/src/: main.rs
