[package]
name = "actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"
actix-rt = "2.5.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
sqlx = { version = "0.5.0", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.0.0", features = ["full"] }

